--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 60px;
+  height: 100px;
   padding: 15px;
   width: 100%;
 }
@@ -60,7 +60,7 @@ header {
 }
 
 .logo-paladino {
-  width: 120px;
+  width: 200px;
 }
 
 .box-cart {
@@ -69,7 +69,7 @@ header {
 }
 
 .logo-carrinho {
-  width: 30px;
+  width: 60px;
   cursor: pointer;
 }
 
@@ -88,7 +88,7 @@ header {
   display: flex;
   justify-content: center;
   justify-content: space-between;
-  height: 45px;
+  height: 70px;
   padding: 15px;
   width: 100%;
 }
@@ -121,7 +121,7 @@ header {
 }
 
 .logo-filtro {
-  width: 25px;
+  width: 40px;
   margin: 5px;
 }
 
@@ -131,21 +131,17 @@ header {
 }
 
 .logo-lupa {
-  width: 20px;
-}
-
-.logo-lupa:hover {
-  width: 22px;
+  width: 30px;
   cursor: pointer;
 }
 
 .search-label {
   align-items: center;
   background-color: rgb(255, 255, 255);
-  border-radius: 20px;
+  border-radius: 50px;
   display: flex;
   justify-content: flex-start;
-  padding: 2px 10px;
+  padding: 10px 10px;
   width: 95%;
 }
 
@@ -154,6 +150,7 @@ header {
   border: none;
   border-radius: 20px;
   color: #02A7EB;
+  font-size: large;
   font-weight: 700;
   outline: none;
   padding: 5px 10px;
