--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 100px;
+  height: 85px;
   padding: 15px;
   width: 100%;
 }
@@ -60,7 +60,7 @@ header {
 }
 
 .logo-paladino {
-  width: 200px;
+  width: 175px;
 }
 
 .box-cart {
@@ -69,13 +69,13 @@ header {
 }
 
 .logo-carrinho {
-  width: 60px;
+  width: 50px;
   cursor: pointer;
 }
 
-.logo-carrinho:hover {
+/* .logo-carrinho:hover {
   width: 35px;
-}
+} */
 
 .contador-carrinho {
   background-color: white;
@@ -88,7 +88,7 @@ header {
   display: flex;
   justify-content: center;
   justify-content: space-between;
-  height: 70px;
+  height: 60px;
   padding: 15px;
   width: 100%;
 }
@@ -121,7 +121,7 @@ header {
 }
 
 .logo-filtro {
-  width: 40px;
+  width: 35px;
   margin: 5px;
 }
 
@@ -131,7 +131,7 @@ header {
 }
 
 .logo-lupa {
-  width: 30px;
+  width: 25px;
   cursor: pointer;
 }
 
@@ -141,7 +141,7 @@ header {
   border-radius: 50px;
   display: flex;
   justify-content: flex-start;
-  padding: 10px 10px;
+  padding: 7px 10px;
   width: 95%;
 }
 
