--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 }
 
 .logo-carrinho {
-  width: 50px;
+  width: 40px;
   cursor: pointer;
 }
 
@@ -121,14 +121,15 @@ header {
 }
 
 .logo-filtro {
-  width: 35px;
+  cursor: pointer;
   margin: 5px;
+  width: 30px;
 }
 
-.logo-filtro:hover {
+/* .logo-filtro:hover {
   width: 30px;
   cursor: pointer;
-}
+} */
 
 .logo-lupa {
   width: 25px;
