--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ header {
 main {
   align-items: center;
   display: flex;
+  flex-direction: column;
   margin: auto;
 }
 
@@ -181,4 +182,61 @@ main {
   justify-content: center;
   margin: auto;
   margin-top: 20px;
+}
+
+.produtos-box {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.produtos{
+  align-items: center;
+  /* border: #02A7EB 2px solid; */
+  border-radius: 10px;
+  box-shadow: 4px 4px 5px 5px rgb(214, 214, 214);
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  justify-content: center;
+  padding: 10px;
+  margin-top: 25px;
+}
+
+.produto-img {
+  width: 150px;
+}
+
+.produto-nome {
+  font-weight: 700;
+}
+
+.produto-tema {
+  color: #8d8d8d;
+}
+
+.produto-preco {
+  font-weight: 700;
+}
+
+.produto-btn {
+  align-items: center;
+  color: white;
+  background: #02A7EB;
+  border: none;
+  border-radius: 10px;
+  font-family: 'News Cycle', sans-serif;
+  padding: 5px 50px;
+  margin: 5px;
+}
+
+
+
+
+
+footer {
+  margin-top: 100px;
 }
