--- a/style.css
+++ b/style.css
@@ -234,10 +234,6 @@ main {
   margin: 5px;
 }
 
-
-
-
-
 footer {
   position:relative;
   left: 0;
@@ -285,3 +281,6 @@ footer {
   width: 20px;
   margin: 5px;
 }
+
+/* slide cancelado temporariamente*/
+
